# GNNPilot

./: build_and_run.sh  run.sh
KG_GNN/: CMakeLists.txt  cmake.sh
KG_GNN/core/: setup.py
KG_GNN/core/src/: KG_GNN.cpp
preprocessing_src/: preprocessing.cu  preprocessing.h
test/: similarity.py  test_kernel.py  utils.py
